--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -73,6 +73,18 @@ input[type='checkbox'] {
     cursor: pointer;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
 label {
     cursor: pointer;
 }
@@ -432,14 +444,14 @@ a:hover {
 /*ToDo: rewrite and reformat this styles / use global variables*/
 /*__________________________________WallSettingsPanel________________________________*/
 .wall-settings-card {
-    margin-top: 210px;
+    margin-top: 240px;
     left: 0;
-    width: 160px;
+    width: 70px;
     background: white;
     border-radius: 10px;
     padding: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    height: 205px;
+    height: 230px;
     z-index: 1000;
     position: fixed;
 }
