added doors and windows to the vuex store and also changed the canvas initialization and scaling logic

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -657,9 +657,9 @@ canvas {
   }
   
   .direction-button.active {
-    background: #42b983;
-    color: white;
-    border-color: #42b983;
+    background: #d0f0ff;
+    border-color: #0096FF;
+    color: #0096FF;
   }
 
   .editable-value {
