--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -555,7 +555,7 @@ canvas {
 }
 /*__________________________________SettingsCard________________________________*/
 .settings-card {
-    margin-top: 210px;
+    margin-top: 150px;
     left: 0;
     width: 160px;
     background: white;
@@ -564,19 +564,11 @@ canvas {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     z-index: 1000;
     position: fixed;
-}
-
-.socket-settings-card {
-    margin-top: 210px;
-    left: 0;
-    width: 160px;
-    background: white;
-    border-radius: 10px;
-    padding: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    z-index: 1000;
-    position: fixed;
-}
+    max-height: 65vh;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
 
 .header {
     font-weight: bold;
